# sevaht-utility

./: .gitignore  README.md  checks  pyproject.toml
src/sevaht_utility/: hinting.py  log_utility.py  naming.py  parsing.py
tests/: test_hinting.py  test_log_utility.py  test_naming.py  test_package_version.py  test_parsing.py
