[project]
name = "sevaht_utility"
version = "0.1.0"
description = "General purpose utilities."
authors = [
    {name = "Jacob McIntosh",email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "sevaht_utility", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.1.0"
mypy = "^1.18.2"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
sevaht-utility = "sevaht_utility.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
