[project]
name = "sevaht_utility"
version = "0.1.0"
description = "General purpose utilities."
authors = [
    {name = "Jacob McIntosh",email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "sevaht_utility", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
sevaht-utility = "sevaht_utility.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["E203", "E501", "COM812", "COM819"]
select = [
    "E", "F", "N", "UP", "ANN", "TCH", "TC",
    "A", "I", "C4", "B", "SIM", "PERF", "PTH", "RET", "TRY", "Q",
    "RUF", "DTZ", "ERA", "PIE", "TID", "S", "FA",
    "FURB", "PGH", "BLE", "FLY", "RSE", "COM",
    "ISC", "ASYNC", "LOG", "ARG",
    "TD", "PLW", "EM",
    #"PLR", "C90"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]
